# C4D_MMD_Tool

./: .codacy.yml  .cursorignore  .editorconfig  .gitattributes  .gitignore  .gitmodules  AGENTS.md  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.SAMPLE.json  DEVELOPMENT.md  DEVELOPMENT_zh.md  README.md  README_zh.md  VMDTool.xdl64  build.bat  bulid.bat  clean.bat  configure_sdk.bat  init.bat
dependency/: CMakeLists.txt
sdk_2023/: CMakeLists.txt  CMakePresets.json
sdk_2023/cmake/: sdk_compat_2023.cmake
sdk_2023/frameworks/animation.framework/project/: SConscript  animation.framework.cbp  animation.framework.includes.props
sdk_2023/frameworks/asset.framework/project/: asset.framework.vcxproj  asset.framework.vcxproj.filters
sdk_2023/frameworks/cinema.framework/project/: SConscript  cinema.framework.cbp  cinema.framework.vcxproj  cinema.framework.vcxproj.filters  projectdefinition.txt
sdk_2023/frameworks/cinema.framework/source/: c4d_basebitmap.cpp  c4d_basebitmap.h  c4d_basedocument.cpp  c4d_basedocument.h  c4d_basedraw.cpp  c4d_basedraw.h  c4d_baseeffectordata.h  c4d_baseeffectorplugin.cpp  c4d_baseeffectorplugin.h  c4d_baselist.cpp  c4d_baselist.h  c4d_basematerial.h  c4d_baseplugin.cpp  c4d_basesound.h  c4d_basetime.cpp  c4d_basetime.h  c4d_canimation.h  c4d_customguidata.cpp  c4d_descriptiondialog.cpp  c4d_descriptiondialog.h  c4d_fielddata.cpp  c4d_fieldplugin.cpp  c4d_filterdata.h  c4d_filterplugin.cpp  c4d_filterplugin.h  c4d_gedata.cpp  c4d_gedata.h  c4d_general.h  c4d_gui.h  c4d_help.h  c4d_listview.h  c4d_memory.h  c4d_messageplugin.h  c4d_network.h  c4d_nodedata.h  c4d_objectdata.h  c4d_painter.h  c4d_particleobject.h  c4d_pmain.cpp  c4d_quaternion.h  (+25 more)
sdk_2023/frameworks/cinema_hybrid.framework/project/: SConscript  cinema_hybrid.framework.cbp  cinema_hybrid.framework.vcxproj  cinema_hybrid.framework.vcxproj.filters  projectdefinition.txt
sdk_2023/frameworks/command.framework/project/: command.framework.cbp  projectdefinition.txt
sdk_2023/frameworks/core.framework/project/: SConscript  core.framework.cbp  core.framework.vcxproj  core.framework.vcxproj.filters
sdk_2023/frameworks/corenodes.framework/project/: SConscript  corenodes.framework.cbp
sdk_2023/frameworks/crypt.framework/project/: SConscript  crypt.framework.cbp
sdk_2023/frameworks/exchange.framework/project/: SConscript  exchange.framework.cbp  exchange.framework.vcxproj  exchange.framework.vcxproj.filters  projectdefinition.txt
sdk_2023/frameworks/geom.framework/project/: SConscript  geom.framework.includes.props
sdk_2023/frameworks/graph.framework/project/: projectdefinition.txt
sdk_2023/frameworks/image.framework/project/: SConscript  image.framework.cbp  image.framework.vcxproj.filters
sdk_2023/frameworks/math.framework/project/: math.framework.cbp  projectdefinition.txt
sdk_2023/frameworks/mesh_misc.framework/project/: SConscript
sdk_2023/frameworks/misc.framework/project/: SConscript  misc.framework.cbp  misc.framework.vcxproj  misc.framework.vcxproj.filters
sdk_2023/frameworks/network.framework/project/: network.framework.includes.props
sdk_2023/frameworks/neutron.framework/project/: neutron.framework.cbp  neutron.framework.vcxproj
sdk_2023/frameworks/nodes.framework/project/: SConscript  nodes.framework.cbp  nodes.framework.vcxproj  projectdefinition.txt
sdk_2023/frameworks/nodespace.framework/project/: SConscript  nodespace.framework.cbp  nodespace.framework.vcxproj  projectdefinition.txt
sdk_2023/frameworks/python.framework/project/: SConscript  python.framework.cbp  python.framework.vcxproj.filters
sdk_2023/frameworks/render_filter.framework/project/: render_filter.framework.cbp
sdk_2023/frameworks/settings/: MSVCBase.props  ccache-clang++.sh  ccache-clang.sh  compiler.xcconfig  debugbase.xcconfig  linux_gcc_x86_base.props  linux_gcc_x86_c_debug.props
sdk_2023/frameworks/settings/sourceprocessor/: declarations.py  lexer.py  sourceprocessor.py
sdk_2023/frameworks/system.framework/project/: projectdefinition.txt  system.framework.cbp  system.framework.vcxproj
sdk_2023/frameworks/volume.framework/project/: SConscript  volume.framework.cbp  volume.framework.vcxproj
sdk_2023/plugins/mmdtool/project/: CMakeLists.txt  mmdtool.vcxproj  mmdtool.vcxproj.filters
sdk_2023/plugins/project/: mmdtool.vcxproj  projectdefinition.txt
sdk_2023/plugins/project/mmdtool.xcodeproj/: project.pbxproj
sdk_2025/: CMakeLists.txt  CMakePresets.json  custom_paths.txt
sdk_2025/cmake/: sdk_update_projects.cmake
sdk_2025/cmake/base_settings/: compile_definitions.cmake  compile_options.cmake  link_options.cmake  warnings.clang.cmake  warnings.msvc.cmake
sdk_2025/frameworks/animation.framework/project/: SConscript  animation.framework.cbp
sdk_2025/frameworks/asset.framework/project/: asset.framework.cbp  asset.framework.vcxproj  asset.framework.vcxproj.filters
sdk_2025/frameworks/cinema.framework/project/: SConscript  cinema.framework.cbp  cinema.framework.includes.props  cinema.framework.vcxproj  cinema.framework.vcxproj.filters  projectdefinition.txt
sdk_2025/frameworks/cinema.framework/source/: c4d.h  c4d_accessedobjects.h  c4d_basebitmap.cpp  c4d_basebitmap.h  c4d_basechannel.h  c4d_basecontainer.cpp  c4d_basecontainer.h  c4d_basecontainer_values.h  c4d_basedata.h  c4d_basedocument.cpp  c4d_basedocument.h  c4d_basedraw.cpp  c4d_basedraw.h  c4d_baseeffectordata.h  c4d_baseeffectorplugin.cpp  c4d_baseeffectorplugin.h  c4d_baselinkarray.h  c4d_baselist.cpp  c4d_baselist.h  c4d_basematerial.cpp  c4d_basematerial.h  c4d_baseobject.cpp  c4d_baseobject.h  c4d_baseplugin.cpp  c4d_baseplugin.h  c4d_baseselect.cpp  c4d_baseselect.h  c4d_basesound.cpp  c4d_basesound.h  c4d_basetag.cpp  c4d_basetag.h  c4d_basetime.h  c4d_bitmapfilter.cpp  (+100 more)
sdk_2025/frameworks/settings/: ReleaseWin64.props  codesign.xcconfig  compiler.xcconfig  debugbase.xcconfig  linux_clang_x86_c++_release.props  linux_gcc_x86_base.props  linux_gcc_x86_c++_release.props  linux_gcc_x86_c_release.props  releasebase.xcconfig  warnings.xcconfig
sdk_2025/plugins/project/: projectdefinition.txt
(+8687 files in other folders)
